# YawREC

./: .gitignore  RAPPORT_AMELIORATIONS.md
scripts/: check_log.ps1  test_audio.ps1
yawrec/: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  region-picker.html  vite.config.js
yawrec/.github/workflows/: release.yml
yawrec/scripts/: build.ps1  make-icons.ps1  sign.ps1
yawrec/src/: main.js  recorder.js  region-picker.js  style.css
yawrec/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
yawrec/src-tauri/capabilities/: default.json  region-picker.json
yawrec/src-tauri/icons/: README.md  generate_icons.py  icon.icns
yawrec/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
yawrec/src-tauri/src/capture/: audio.rs  mod.rs  screen.rs  webcam.rs  window.rs
yawrec/src-tauri/src/encoder/: mod.rs
